Enhance GitHub authentication methods in CLI scripts and documentation
- Updated README.md to clarify GitHub authentication options.
- Modified automation/README.md to include detailed authentication methods.
- Enhanced copilot-cli.ps1 and copilot-cli.sh to support GitHub Personal Access Token and environment variables for authentication.
- Updated copilot-cli.properties with examples for GitHub token usage.

--- a/automation/copilot-cli.properties
+++ b/automation/copilot-cli.properties
@@ -8,6 +8,11 @@
 copilot.model=claude-sonnet-4.5
 auto.install.cli=true
 
+# GitHub Authentication
+# Uncomment and set your GitHub Personal Access Token for authentication
+# github.token=ghp_xxxxxxxxxxxxxxxxxxxx
+# Alternative: Use environment variables GH_TOKEN or GITHUB_TOKEN
+
 # Tool Permissions
 allow.all.tools=true
 allow.all.paths=false
@@ -31,6 +36,13 @@ node.version=22
 
 # Example MCP Configuration (as JSON string)
 # mcp.config={"mcpServers":{"my-server":{"command":"python","args":["server.py"],"tools":["*"]}}}
+
+# GitHub Authentication Examples
+# For CI/CD environments, set as environment variable:
+# export GITHUB_TOKEN=ghp_xxxxxxxxxxxxxxxxxxxx
+# export GH_TOKEN=ghp_xxxxxxxxxxxxxxxxxxxx
+# For production environments, use encrypted secrets management
+# For local development, set in this file or environment variables
 
 # Common Tool Configurations
 # For security analysis
