Add installation scripts and prompts for GitHub Copilot CLI Automation Accelerator
- Created `install.ps1` for PowerShell installation of the automation suite.
- Added `install.sh` for Bash installation with support for various options.
- Introduced user and system prompts for test generation in `automation/examples/test-generation/`.
- Updated `test-generation-agent.properties` to reference new prompt files.
- Created default prompt files for user and system configurations.
- Implemented repository visibility checks and GitHub authentication in installation scripts.
- Added comprehensive logging and error handling in both installation scripts.
- Ensured compatibility with both public and private GitHub repositories.

--- a/.copilot-cli-automation/automation/copilot-cli.properties
+++ b/.copilot-cli-automation/automation/copilot-cli.properties
@@ -3,9 +3,8 @@
 # Values can be overridden by command line arguments
 
 # Core Configuration
-# Default prompt files (can be overridden by command line arguments)
-prompt.file=user.prompt.md
-system.prompt.file=system.prompt.md
+# prompt=Review the code for potential issues and improvements
+# system.prompt=Focus only on security vulnerabilities and performance optimizations. Provide specific line numbers and actionable recommendations.
 copilot.model=claude-sonnet-4.5
 auto.install.cli=true
 
@@ -22,7 +21,7 @@ allow.all.paths=false
 
 # Directory Access
 # additional.directories=./src,./docs,./test
-working.directory=/c/Users/neildcruz/LOCAL_DOCUMENTS/CODE/DEMO_PROJECTS/java-bookstore-neildcruz
+working.directory=.
 
 # MCP Server Configuration
 # mcp.config.file=examples/mcp-config.json
