--- a/.copilot-cli-automation/automation/examples/code-review/code-review-agent.properties
+++ b/.copilot-cli-automation/automation/examples/code-review/code-review-agent.properties
@@ -2,8 +2,9 @@
 # Performs comprehensive code review with best practices focus
 
 # Core Configuration
-prompt.file=user.prompt.md
-system.prompt.file=system.prompt.md
+prompt=Review all code in this repository. For each file: 1. Identify code smells and anti-patterns 2. Suggest improvements with reasoning 3. Highlight security concerns 4. Check for proper error handling 5. Assess code readability and documentation. Generate a comprehensive review report with prioritized recommendations.
+
+system.prompt=You are an expert code reviewer. Focus on: 1. Code quality and maintainability 2. Design patterns and best practices 3. Performance optimization opportunities 4. Error handling and edge cases 5. Code consistency and style 6. Potential bugs or logic errors. Provide specific, actionable feedback with code examples where appropriate.
 
 # Model Configuration
 copilot.model=claude-sonnet-4.5
