--- a/automation/examples/cicd-analysis/cicd-analysis-agent.properties
+++ b/automation/examples/cicd-analysis/cicd-analysis-agent.properties
@@ -2,9 +2,8 @@
 # Analyzes and optimizes CI/CD pipeline configurations
 
 # Core Configuration
-prompt=Analyze CI/CD pipeline configurations and workflows: 1. Review all pipeline files (.github/workflows, .gitlab-ci.yml, azure-pipelines.yml, etc.) 2. Identify bottlenecks and optimization opportunities 3. Check for security best practices (secrets, permissions, supply chain) 4. Validate test coverage and quality gates 5. Review deployment strategies and environment configurations 6. Assess monitoring and alerting setup 7. Check for proper error handling and notifications 8. Suggest improvements for build time and reliability. Generate a comprehensive report with prioritized recommendations.
-
-system.prompt=You are a DevOps and CI/CD expert. Focus on: 1. Analyzing pipeline efficiency and build times 2. Identifying security issues in CI/CD configurations 3. Optimizing caching and dependency management 4. Improving pipeline parallelization 5. Reviewing deployment strategies and rollback procedures 6. Ensuring proper secrets management 7. Validating test coverage and quality gates. Provide specific, actionable recommendations with examples.
+prompt.file=user.prompt.md
+system.prompt.file=system.prompt.md
 
 # Model Configuration
 copilot.model=claude-sonnet-4.5
