--- a/automation/examples/refactoring/refactoring-agent.properties
+++ b/automation/examples/refactoring/refactoring-agent.properties
@@ -2,9 +2,8 @@
 # Refactors code for better quality and maintainability
 
 # Core Configuration
-prompt=Analyze the codebase and perform refactoring: 1. Identify code smells and technical debt 2. Extract reusable functions and modules 3. Simplify complex conditional logic 4. Improve error handling patterns 5. Standardize naming conventions 6. Break down large functions/classes 7. Remove dead code and unused dependencies 8. Apply appropriate design patterns. For each refactoring, explain the rationale and ensure tests still pass.
-
-system.prompt=You are a refactoring expert. Focus on: 1. Improving code structure and organization 2. Eliminating code duplication (DRY principle) 3. Simplifying complex logic and reducing cognitive load 4. Applying design patterns appropriately 5. Improving naming conventions for clarity 6. Enhancing modularity and separation of concerns 7. Maintaining backward compatibility and existing behavior. Always refactor incrementally with clear explanations of changes.
+prompt.file=user.prompt.md
+system.prompt.file=system.prompt.md
 
 # Model Configuration
 copilot.model=claude-sonnet-4.5
