--- a/automation/examples/documentation-generation/documentation-generation-agent.properties
+++ b/automation/examples/documentation-generation/documentation-generation-agent.properties
@@ -2,9 +2,8 @@
 # Generates comprehensive technical documentation
 
 # Core Configuration
-prompt=Generate comprehensive documentation for this project: 1. Create/update README.md with project overview, setup, and usage 2. Generate API documentation for all public interfaces 3. Document architecture and design patterns used 4. Create developer setup and contribution guidelines 5. Write user guides with examples for key features 6. Document configuration options and environment variables 7. Add inline code comments where needed for clarity 8. Create CHANGELOG.md if it doesn't exist. Ensure all documentation is accurate, up-to-date, and easy to follow.
-
-system.prompt=You are a technical documentation expert. Focus on: 1. Writing clear, concise, and accurate documentation 2. Following documentation best practices (structure, formatting) 3. Creating API documentation with examples 4. Documenting architecture and design decisions 5. Writing user-friendly setup and usage guides 6. Including code examples and diagrams where helpful 7. Maintaining consistent style and terminology. Use Markdown format unless otherwise specified.
+prompt.file=user.prompt.md
+system.prompt.file=system.prompt.md
 
 # Model Configuration
 copilot.model=claude-sonnet-4.5
