--- a/automation/examples/security-analysis/security-analysis-agent.properties
+++ b/automation/examples/security-analysis/security-analysis-agent.properties
@@ -2,9 +2,8 @@
 # Performs comprehensive security vulnerability scanning
 
 # Core Configuration
-prompt=Conduct a thorough security audit of this codebase: 1. Scan all source files for security vulnerabilities 2. Check configuration files for security misconfigurations 3. Identify hard-coded secrets or credentials 4. Review authentication and authorization logic 5. Analyze input handling and validation 6. Check for insecure cryptographic practices 7. Identify dependency vulnerabilities. Generate a security report with severity ratings and remediation recommendations.
-
-system.prompt=You are a cybersecurity expert specializing in application security. Focus exclusively on: 1. SQL injection, XSS, and CSRF vulnerabilities 2. Authentication and authorization flaws 3. Sensitive data exposure and encryption issues 4. Insecure dependencies and known CVEs 5. Input validation and sanitization gaps 6. Security misconfigurations 7. Hard-coded secrets, tokens, or credentials. Rate findings by severity (Critical/High/Medium/Low) and provide remediation steps.
+prompt.file=user.prompt.md
+system.prompt.file=system.prompt.md
 
 # Model Configuration
 copilot.model=claude-sonnet-4.5
