--- a/automation/examples/test-generation/test-generation-agent.properties
+++ b/automation/examples/test-generation/test-generation-agent.properties
@@ -2,9 +2,8 @@
 # Generates comprehensive unit and integration tests
 
 # Core Configuration
-prompt=Analyze the codebase and generate comprehensive tests: 1. Identify untested or under-tested modules and functions 2. Generate unit tests for all public methods and functions 3. Create integration tests for critical user workflows 4. Add tests for edge cases and error handling 5. Ensure tests follow project conventions and best practices 6. Calculate and report estimated code coverage 7. Generate test data fixtures where needed. Create test files in the appropriate test directory following project structure.
-
-system.prompt=You are a test automation expert. Focus on: 1. Writing comprehensive unit tests with high code coverage 2. Creating integration tests for critical workflows 3. Following testing best practices (AAA pattern, descriptive names) 4. Covering edge cases, boundary conditions, and error scenarios 5. Using appropriate test doubles (mocks, stubs, fakes) 6. Writing maintainable, readable test code 7. Ensuring tests are independent and repeatable. Use the project's existing test framework and conventions.
+prompt.file=user.prompt.md
+system.prompt.file=system.prompt.md
 
 # Model Configuration
 copilot.model=claude-sonnet-4.5
