Add .gitignore entry for Copilot CLI automation directory and update installation script to manage gitignore entries

--- a/automation/copilot-cli.properties
+++ b/automation/copilot-cli.properties
@@ -22,7 +22,7 @@ allow.all.paths=false
 
 # Directory Access
 # additional.directories=./src,./docs,./test
-working.directory=/c/Users/neildcruz/LOCAL_DOCUMENTS/CODE/DEMO_PROJECTS/java-bookstore-neildcruz
+working.directory=.
 
 # MCP Server Configuration
 # mcp.config.file=examples/mcp-config.json
