--- a/.github/workflows/copilot-cli-action.yml
+++ b/.github/workflows/copilot-cli-action.yml
@@ -116,13 +116,15 @@ jobs:
           echo "📦 Downloading and running install script..."
           
           # Download and execute install script with authentication
+          # Export GITHUB_TOKEN so the bash subprocess can access it
+          export GITHUB_TOKEN="$GITHUB_TOKEN"
           curl -fsSL -H "Authorization: Bearer $GITHUB_TOKEN" "$INSTALL_SCRIPT_URL" | bash
           
           echo "✅ Copilot CLI Automation Suite installed successfully"
           
           # Write the copilot-cli.properties configuration
           echo "📝 Writing copilot-cli.properties configuration..."
-          cat << 'EOF' > copilot-cli-automation-accelerator/automation/copilot-cli.properties
+          cat << 'EOF' > .copilot-cli-automation/automation/copilot-cli.properties
           ${{ inputs.copilot_cli_properties }}
           EOF
           
@@ -130,7 +132,7 @@ jobs:
           
           # Verify installation
           echo "🔍 Verifying installation..."
-          ls -la copilot-cli-automation-accelerator/automation/
+          ls -la .copilot-cli-automation/automation/
 
       # Step 3: Run Copilot CLI with prompts
       - name: Run Copilot CLI
@@ -140,7 +142,7 @@ jobs:
           echo "🚀 Running GitHub Copilot CLI..."
           
           # Navigate to the automation directory
-          cd copilot-cli-automation-accelerator/automation
+          cd .copilot-cli-automation/automation
           
           # Make script executable
           chmod +x copilot-cli.sh
