--- a/.github/workflows/copilot-cli-action.yml
+++ b/.github/workflows/copilot-cli-action.yml
@@ -99,6 +99,7 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      COPILOT_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       # Step 1: Checkout code
@@ -107,7 +108,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      # Step 2: Install Copilot CLI Automation Suite
+      # Step 2: Setup Node.js 22 (required by Copilot CLI)
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+
+      # Step 3: Install Copilot CLI Automation Suite
       - name: Install Copilot CLI Automation Suite
         shell: bash
         env:
@@ -116,15 +123,13 @@ jobs:
           echo "📦 Downloading and running install script..."
           
           # Download and execute install script with authentication
-          # Export GITHUB_TOKEN so the bash subprocess can access it
-          export GITHUB_TOKEN="$GITHUB_TOKEN"
           curl -fsSL -H "Authorization: Bearer $GITHUB_TOKEN" "$INSTALL_SCRIPT_URL" | bash
           
           echo "✅ Copilot CLI Automation Suite installed successfully"
           
           # Write the copilot-cli.properties configuration
           echo "📝 Writing copilot-cli.properties configuration..."
-          cat << 'EOF' > .copilot-cli-automation/automation/copilot-cli.properties
+          cat << 'EOF' > copilot-cli-automation-accelerator/automation/copilot-cli.properties
           ${{ inputs.copilot_cli_properties }}
           EOF
           
@@ -132,9 +137,9 @@ jobs:
           
           # Verify installation
           echo "🔍 Verifying installation..."
-          ls -la .copilot-cli-automation/automation/
+          ls -la copilot-cli-automation-accelerator/automation/
 
-      # Step 3: Run Copilot CLI with prompts
+      # Step 4: Run Copilot CLI with prompts
       - name: Run Copilot CLI
         id: run-copilot-cli
         shell: bash
@@ -142,7 +147,7 @@ jobs:
           echo "🚀 Running GitHub Copilot CLI..."
           
           # Navigate to the automation directory
-          cd .copilot-cli-automation/automation
+          cd copilot-cli-automation-accelerator/automation
           
           # Make script executable
           chmod +x copilot-cli.sh
