feat: Add built-in default prompts for quick code analysis; enhance user and system prompts for clarity and structure

--- a/automation/copilot-cli.properties
+++ b/automation/copilot-cli.properties
@@ -9,6 +9,11 @@ system.prompt.file=system.prompt.md
 copilot.model=claude-sonnet-4.5
 auto.install.cli=true
 
+# Use built-in default prompts (overrides prompt.file and system.prompt.file)
+# The default prompts provide a general-purpose code analysis task
+# Set to true to use defaults, or use -UseDefaults / --use-defaults flag
+# use.defaults=false
+
 # GitHub Authentication
 # Uncomment and set your GitHub Personal Access Token for authentication
 # github.token=ghp_xxxxxxxxxxxxxxxxxxxx
