--- a/automation/copilot-cli.properties
+++ b/automation/copilot-cli.properties
@@ -14,6 +14,17 @@ auto.install.cli=true
 # Set to true to use defaults, or use -UseDefaults / --use-defaults flag
 # use.defaults=false
 
+# Custom Agent Directories
+# Specify custom directories to search for agents (in addition to built-in examples)
+# agent.directory=./.copilot-agents
+# additional.agent.directories=./ci/agents,./automation/custom-agents
+# Agents are discovered in this order (first match wins):
+#   1. agent.directory parameter
+#   2. additional.agent.directories parameter
+#   3. COPILOT_AGENT_DIRECTORIES environment variable
+#   4. .copilot-agents/ in current directory
+#   5. Built-in examples directory
+
 # GitHub Authentication
 # Uncomment and set your GitHub Personal Access Token for authentication
 # github.token=ghp_xxxxxxxxxxxxxxxxxxxx
