Refactor project documentation and enhance automation scripts
- Removed outdated INDEX.md file and consolidated relevant information into INSTALL.md and README.md.
- Expanded INSTALL.md with detailed prerequisites, PowerShell execution policy instructions, and safe update behavior.
- Updated README.md to include badges, quick start options, and troubleshooting tips.
- Enhanced actions/README.md with required permissions for GitHub Actions workflows.
- Improved security-analysis.yml, documentation.yml, and code-review.yml with permission specifications.
- Added multi-stage workflow example to demonstrate sequential agent execution for security analysis and fix generation.
- Created detailed prompts and configuration files for multi-stage workflow agents, including security scanner and fix generator.
- Introduced comprehensive diagnostics in automation scripts for better troubleshooting.

--- a/actions/documentation.yml
+++ b/actions/documentation.yml
@@ -41,6 +41,13 @@ on:
 jobs:
   documentation:
     name: AI Documentation Generation
+    # Required permissions:
+    # - contents: write = Create/update documentation files and commit changes
+    # - pull-requests: write = (Optional) Comment on PRs with generated docs
+    permissions:
+      contents: write
+      # Uncomment to allow PR comments:
+      # pull-requests: write
     uses: ./.github/workflows/copilot-cli-action.yml
     with:
       system_prompt: |
@@ -90,6 +97,10 @@ jobs:
     needs: documentation
     if: always() && needs.documentation.result == 'success'
     runs-on: ubuntu-latest
+    # Required permissions:
+    # - contents: read = Access repository for step summary
+    permissions:
+      contents: read
     steps:
       - name: Display Documentation Results
         run: |
