--- a/actions/code-review.yml
+++ b/actions/code-review.yml
@@ -21,6 +21,12 @@ on:
 jobs:
   code-review:
     name: AI Code Review
+    # Required permissions:
+    # - contents: read = Read repository code and PR changes
+    # - pull-requests: write = Post review comments on PRs (recommended)
+    permissions:
+      contents: read
+      pull-requests: write  # Comment to disable PR commenting
     uses: ./.github/workflows/copilot-cli-action.yml
     with:
       system_prompt: |
@@ -63,6 +69,10 @@ jobs:
     needs: code-review
     if: always() && needs.code-review.result == 'success'
     runs-on: ubuntu-latest
+    # Required permissions:
+    # - contents: read = Access repository for step summary
+    permissions:
+      contents: read
     steps:
       - name: Display Code Review Results
         run: |
