--- a/automation/copilot-cli.properties
+++ b/automation/copilot-cli.properties
@@ -5,11 +5,11 @@
 # Core Configuration
 # Default prompt files (can be overridden by command line arguments)
 prompt.file=user.prompt.md
-system.prompt.file=system.prompt.md
+agent.file=default.agent.md
 copilot.model=claude-sonnet-4.5
 auto.install.cli=true
 
-# Use built-in default prompts (overrides prompt.file and system.prompt.file)
+# Use built-in default prompts (overrides prompt.file and agent.file)
 # The default prompts provide a general-purpose code analysis task
 # Set to true to use defaults, or use -UseDefaults / --use-defaults flag
 # use.defaults=false
