--- a/automation/examples/multi-stage-workflow/stage-2-fixer/copilot-cli.properties
+++ b/automation/examples/multi-stage-workflow/stage-2-fixer/copilot-cli.properties
@@ -4,7 +4,7 @@
 
 # Prompts
 prompt.file=user.prompt.md
-system.prompt.file=system.prompt.md
+agent.file=stage-2-fixer.agent.md
 
 # Model Configuration
 copilot.model=claude-sonnet-4.5
