--- a/automation/examples/code-review/copilot-cli.properties
+++ b/automation/examples/code-review/copilot-cli.properties
@@ -3,7 +3,7 @@
 
 # Core Configuration
 prompt.file=user.prompt.md
-system.prompt.file=system.prompt.md
+agent.file=code-review.agent.md
 
 # Model Configuration
 copilot.model=claude-sonnet-4.5
