feat: Add agent discovery and detailed configuration display for specific agents

--- a/automation/copilot-cli.properties
+++ b/automation/copilot-cli.properties
@@ -16,8 +16,9 @@ auto.install.cli=true
 
 # Custom Agent Directories
 # Specify custom directories to search for agents (in addition to built-in examples)
-# agent.directory=./.copilot-agents
-# additional.agent.directories=./ci/agents,./automation/custom-agents
+# Supports local paths (./my-agents) or remote GitHub repos (owner/repo[@branch][:agent-name])
+agent.directory=neildcruz/copilot-cli-accelerator-agent-samples
+# additional.agent.directories=./ci/agents,myorg/shared-agents
 # Agents are discovered in this order (first match wins):
 #   1. agent.directory parameter
 #   2. additional.agent.directories parameter
